@@ -74,3 +74,6 @@ What's new in Sudo 1.7.0?
    would exit sudo.  In sudo 1.7.0 and beyond, this is treated as
    an empty password.  To exit sudo, the user must press ^C or ^D
    at the prompt.
+
+ * visudo will now check the sudoers file owner and mode in -c (check)
+   mode when the -s (strict) flag is specified.
